--- a/views/aeronave_view.xml
+++ b/views/aeronave_view.xml
@@ -43,6 +43,7 @@
             </field>
         </record>
 
+        <!--Vista kanban-->
         <record model="ir.ui.view" id="quintofly.aeronave_kanban">
             <field name="name">Aeronaves Kanban</field>
             <field name="model">quintofly.aeronave</field>
@@ -51,25 +52,21 @@
                     <templates>
                         <t t-name="kanban-box">
                             <div class="oe_kanban_card">
-                                <!-- Matrícula -->
                                 <div>
                                     <strong>Matrícula:</strong>
                                     <field name="matricula"/>
                                 </div>
                                 
-                                <!-- Tipo -->
                                 <div>
                                     <strong>Tipo:</strong>
                                     <field name="tipo"/>
                                 </div>
                                 
-                                <!-- Modelo -->
                                 <div>
                                     <strong>Modelo:</strong>
                                     <field name="modelo"/>
                                 </div>
                                 
-                                <!-- Capacidad de peso -->
                                 <div>
                                     <strong>Capacidad de Peso:</strong>
                                     <field name="capacidad_peso"/> Kg
