--- a/views/aeronave_view.xml
+++ b/views/aeronave_view.xml
@@ -11,6 +11,7 @@
                     <field name="tipo"/>
                     <field name="modelo"/>
                     <field name="capacidad_peso"/>
+                    <field name="vuelo_ids"/>
                 </tree>
             </field>
         </record>
@@ -75,6 +76,11 @@
                                 <div>
                                     <strong>Capacidad de Peso:</strong>
                                     <field name="capacidad_peso"/> Kg
+                                </div>
+
+                                <div>
+                                <strong>Vuelos:</strong>
+                                    <field name="vuelo_ids" widget="many2many_tags"/>
                                 </div>
                             </div>
                         </t>
